--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,5 +125,9 @@ jobs:
         run: |
           python -m venv venv
 
+      - name: install
+        run: |
+          venv/bin/pip install -e .[dev]
+
       - name: check
         run: ${{ matrix.task.run }}
