--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,6 +105,9 @@ jobs:
               # TODO: would be nice to have all this in a config file, even if we need to use another tool
               venv/bin/licenseheaders --ext py --tmpl license.template --current-year --owner 'Circular Drive Initiative' --projname 'CDI Health' --projurl 'https://github.com/circulardrives/cdi-grading-tool-alpha/'
               git diff --exit-code
+          - pyupgrade: pyupgrade
+            run: |
+              find . -name venv -prune -o -regextype posix-extended -regex '.*.pyi?' -print | xargs --max-lines=20 --max-procs=5 venv/bin/pyupgrade --py39-plus --keep-runtime-typing
         os:
           - name: Linux
             runs-on: ubuntu-latest
