--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,6 +109,10 @@ jobs:
             run: |
               venv/bin/ruff format
               git diff --exit-code
+          - name: Lint
+            run: |
+              venv/bin/ruff check --fix
+              git diff --exit-code
         os:
           - name: Linux
             runs-on: ubuntu-latest
