--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,7 +140,7 @@ jobs:
         run: ${{ matrix.task.run }}
 
   pre-commit:
-    name: pre-commit ${{ matrix.os.name }} ${{ matrix.python.major_dot_minor }}
+    name: pre-commit ${{ matrix.os.name }} ${{ matrix.python.major-dot-minor }}
     runs-on: ${{ matrix.os.runs-on }}
     timeout-minutes: 5
     strategy:
@@ -154,10 +154,10 @@ jobs:
 #          - name: Windows
 #            runs-on: windows-latest
         python:
-          - major_dot_minor: "3.9"
-          - major_dot_minor: "3.10"
-          - major_dot_minor: "3.11"
-          - major_dot_minor: "3.12"
+          - major-dot-minor: "3.9"
+          - major-dot-minor: "3.10"
+          - major-dot-minor: "3.11"
+          - major-dot-minor: "3.12"
 
     steps:
       - uses: actions/checkout@v3
