--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,7 +100,7 @@ jobs:
           meson --buildtype=release builddir
           ninja -C builddir
           cd builddir
-          cp openSeaChest_* !(*.p) /usr/bin/openSeaChest/
+          (shopt -s extglob; cp openSeaChest_* !(*.p) /usr/bin/openSeaChest/)
 
       - name: build smartmontools
         run: |
