--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,8 +100,8 @@ jobs:
           meson --buildtype=release builddir
           ninja -C builddir
           cd builddir
-          find openSeaChest_* -name '*.p' -exec rm -rf '{}' \;
-          cp openSeaChest_* !(*.p) /usr/bin/openSeaChest/
+          rm -rf *.p
+          cp openSeaChest_* /usr/bin/openSeaChest/
 
       - name: build smartmontools
         run: |
