--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,6 +101,7 @@ jobs:
           ninja -C builddir
           cd builddir
           rm -rf *.p
+          mkdir -p /usr/bin/openSeaChest/
           cp openSeaChest_* /usr/bin/openSeaChest/
 
       - name: build smartmontools
